--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django-restframework = "*"
+django = "*"
+pillow = "*"
+djangorestframework = "*"
 
 [dev-packages]
+autopep8 = "*"
 
 [requires]
 python_version = "3.10"
